marketplace-app/overlays/starmarket/ingress-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-manager-ingress-https
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/custom-http-errors: "404"
    nginx.ingress.kubernetes.io/default-backend: $(VC_INSTANCE)-demo-manager
    nginx.ingress.kubernetes.io/proxy-buffering: on
    nginx.ingress.kubernetes.io/proxy-buffers-number: 16
    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
    nginx.ingress.kubernetes.io/client-body-buffer-size: 60m
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
      - "vendor-portal.$(VC_INSTANCE).$(VC_NAMESPACE).govirto.com"
      secretName: $(VC_INSTANCE)-demo-manager-$(VC_NAMESPACE)-tls
  rules:
  - host: vendor-portal.$(VC_INSTANCE).$(VC_NAMESPACE).govirto.com
    http:
      paths:
      - backend:
          serviceName: demo-manager
          servicePort: 80
        path: /(.*)
      - backend:
          serviceName: platform
          servicePort: 80
        path: /(api)(.*)
      - backend:
          serviceName: platform
          servicePort: 80
        path: /(connect\/token)(.*)
      - backend:
          serviceName: platform
          servicePort: 80
        path: /(pushNotificationHub)(.*)
      - backend:
          serviceName: platform
          servicePort: 80
        path: /(Modules)(.*)
